--- a/第一版页面/orderDetail.html
+++ b/第一版页面/orderDetail.html
@@ -117,7 +117,7 @@
                 <a href="popularActivities.html">人气活动</a>
             </li>
             <li>
-                <a href="orderList.html">订单查询</a>
+                <a href="orderList-new.html">订单查询</a>
             </li>
             <li>
                 <a>财务管理</a>
