--- a/第一版页面/user.html
+++ b/第一版页面/user.html
@@ -182,7 +182,7 @@
                 <a href="popularActivities.html">人气活动</a>
             </li>
             <li>
-                <a href="orderList.html">订单查询</a>
+                <a href="orderList-new.html">订单查询</a>
             </li>
             <li>
                 <a>财务管理</a>
@@ -196,7 +196,7 @@
                 <a class="actives">个人中心</a>
                 <ul class="item-list">
                     <li><a href="company.html" >公司信息</a></li>
-                    <li><a href="Personal.html">个人信息</a></li>
+                    <li><a href="user.html">个人信息</a></li>
                 </ul>
             </li>
         </ul>
