--- a/第一版页面/orderList-new.html
+++ b/第一版页面/orderList-new.html
@@ -143,7 +143,7 @@
                 <a href="popularActivities.html">人气活动</a>
             </li>
             <li>
-                <a href="orderList.html" class="actives">订单查询</a>
+                <a href="orderList-new.html" class="actives">订单查询</a>
             </li>
             <li>
                 <a>财务管理</a>
@@ -244,19 +244,21 @@
     </table>
 
     <!-- 分页 -->
-    <ul class="pagination">
-        <li class="disabled prev"><a href="javascript:;" aria-label="Previous"><span aria-hidden="true">上一页</span></a></li>
-        <li class="active"><a href="javascript:;">1 <span class="sr-only">(current)</span></a></li>
-        <li><a href="javascript:;">2</a></li>
-        <li><a href="javascript:;">3</a></li>
-        <li><a href="javascript:;">4</a></li>
-        <li><a href="javascript:;">5</a></li>
-        <li><a href="javascript:;">6</a></li>
-        <li><a href="javascript:;">7</a></li>
-        <li><a href="javascript:;" class="morePage">...</a></li>
-        <li><a href="javascript:;">24</a></li>
-        <li class="next"><a href="javascript:;" aria-label="Next"><span aria-hidden="true">下一页</span></a></li>
-    </ul>
+    <div class="pagination">
+        <div class="disabled prev">上一页</div>
+        <ul>
+            <li class="active">1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+            <li>7</li>
+            <li class="morePageNext">...</li>
+            <li>24</li>
+        </ul>
+        <div class="next">下一页</div>
+    </div>
 </div>
 <!--底部-->
 <footer>
