--- a/第一版页面/pay.html
+++ b/第一版页面/pay.html
@@ -93,7 +93,7 @@
                 <li class=""><a href="#">软件下载</a></li>
                 <li><a href="#">打开客户端</a></li>
                 <li><a href="#">安全退出</a></li>
-                <li class="cart"><a href="#">购物车</a></li>
+                <li class="cart"><a href="cart.html">购物车</a></li>
             </ul>
         </div>
     </div>
@@ -116,7 +116,7 @@
                 <a href="popularActivities.html">人气活动</a>
             </li>
             <li>
-                <a href="orderList.html">订单查询</a>
+                <a href="orderList-new.html">订单查询</a>
             </li>
             <li>
                 <a>财务管理</a>
@@ -130,7 +130,7 @@
                 <a>个人中心</a>
                 <ul class="item-list">
                     <li><a href="company.html" >公司信息</a></li>
-                    <li><a href="Personal.html">个人信息</a></li>
+                    <li><a href="user.html">个人信息</a></li>
                 </ul>
             </li>
         </ul>
