--- a/第一版页面/orderList-new.html
+++ b/第一版页面/orderList-new.html
@@ -167,7 +167,7 @@
 <div class="wrap content orderList">
     <!-- 搜索框 -->
     <div class="search-box">
-        <span>充值时间：</span><input type="date">
+        <span>充值时间：</span><input type="text" data-calendar>
         <span>客户名：</span><input type="text">
         <div class="btn-group">
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">订单状态 <span class="caret-box"><i class="caret"></i></span></button>
@@ -248,14 +248,33 @@
         <div class="disabled prev">上一页</div>
         <ul>
             <li class="active">1</li>
-            <li>2</li>
+
+            <li class="morePagePrev">...</li>
+
+            <li>13</li>
+            <li>14</li>
+            <li>15</li>
+            <li>16</li>
+            <li>17</li>
+            <li>18</li>
+            
+            <!-- <li>4</li>
+            <li>5</li>
+            <li>6</li>
+            <li>7</li>
+            <li>8</li>
+            <li>9</li> -->
+
+            <!-- <li>2</li>
             <li>3</li>
             <li>4</li>
             <li>5</li>
             <li>6</li>
             <li>7</li>
-            <li class="morePageNext">...</li>
-            <li>24</li>
+            <li>8</li> -->
+
+            <!-- <li class="morePageNext">...</li> -->
+            <!-- <li>24</li> -->
         </ul>
         <div class="next">下一页</div>
     </div>
@@ -285,6 +304,7 @@
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script src="js/bootstrap-datetimepicker.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/calendar.js"></script>
 
 <script>
     $(function () {
